# ML-based-epileptic-seizure-prediction

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_dashboard.bat  run_dashboard.sh  run_save_model.bat
.cursor/rules/: 00-core-security.mdc  05-ascii-punctuation.mdc  10-code-quality.mdc  20-testing-validation.mdc  30-data-and-performance.mdc  40-observability-dependencies.mdc  50-ai-execution-policy.mdc
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: default.yaml
dashboard/: app.py  charts.py
data/: .gitkeep
docs/: ARCHITECTURE.md  DATA.md
examples/: quickstart.md
models/: .gitkeep
notebooks/: README.md  save_model_cell.py
notebooks/legacy/: Epilepsy.ipynb
scripts/: build_chbmit_training.py  export_from_kernel.py  save_model.py  save_model_cell.py
src/epilepsy_detection/: __init__.py  cli.py  notebook_export.py
src/epilepsy_detection/api/: __init__.py  app.py
src/epilepsy_detection/config/: __init__.py  settings.py
src/epilepsy_detection/data/: __init__.py  annotations.py  edf_loader.py
src/epilepsy_detection/detection/: __init__.py  intervals.py
src/epilepsy_detection/evaluation/: __init__.py  metrics.py
src/epilepsy_detection/features/: __init__.py  epoch_features.py  extractor.py
src/epilepsy_detection/gui/: __init__.py  app.py
src/epilepsy_detection/models/: __init__.py  classifier.py  imbalance.py
src/epilepsy_detection/pipeline/: __init__.py  detection_pipeline.py
src/epilepsy_detection/training/: __init__.py  trainer.py
tests/: test_annotations.py  test_api.py  test_detection.py  test_epoch_features.py  test_pipeline_smoke.py
