[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epilepsy-detection"
version = "1.0.0"
description = "ML-based epileptic seizure (ictal) detection from scalp EEG"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Abu Shad Ahammed", email = "abu.ahammed@uni-siegen.de" },
]
keywords = ["epilepsy", "eeg", "seizure", "machine-learning", "chb-mit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mne>=1.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "typer>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
    "python-multipart>=0.0.6",
    "pyarrow>=14.0.0",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.29.0", "plotly>=5.18.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.scripts]
epilepsy = "epilepsy_detection.cli:main"

[project.urls]
Homepage = "https://github.com/ShadAhammed/ML-based-epileptic-seizure-prediction"
Repository = "https://github.com/ShadAhammed/ML-based-epileptic-seizure-prediction"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
